[package]
name = "ros"
version = "0.1.0"
authors = ["shardamaka <mariusalexandrutache@gmail.com>", "alexandru-dinu <alex.dinu07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9"
rosrust_msg = "0.1"
